Fix nav-link wrapping on devices with smaller screen width

--- a/aswin-home/src/app/styles/header.scss
+++ b/aswin-home/src/app/styles/header.scss
@@ -42,3 +42,10 @@
         filter: invert(1);
     }
 }
+
+// For displays having width less that 325px (like Samsung fold)
+@media only screen and (max-width: 325px) {
+    .navbar .nav-link {
+        padding: 5px;
+    }
+}
